# desdeo-mcdm

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: DESDEO-mcdm.yml  Lint.yml  automate-DESDEO-mcdm.yml
desdeo_mcdm/: .readthedocs.yml
desdeo_mcdm/approximation/: PAINT.py  __init__.py
desdeo_mcdm/interactive/: ENautilus.py  InteractiveMethod.py  NIMBUS.py  Nautilus.py  NautilusNavigator.py  NautilusV2.py  ParetoNavigator.py  ReferencePointMethod.py  __init__.py
desdeo_mcdm/utilities/: __init__.py  solvers.py
docs/: 404.rst  api.rst  background.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/_static/: style.css  style2.css
docs/_templates/: layout.html  layout2.html
docs/api/: desdeo_mcdm.interactive.ENautilus.rst  desdeo_mcdm.interactive.ENautilusException.rst  desdeo_mcdm.interactive.ENautilusInitialRequest.rst  desdeo_mcdm.interactive.ENautilusRequest.rst  desdeo_mcdm.interactive.ENautilusStopRequest.rst  desdeo_mcdm.interactive.NIMBUS.rst  desdeo_mcdm.interactive.Nautilus.rst  desdeo_mcdm.interactive.NautilusException.rst  desdeo_mcdm.interactive.NautilusInitialRequest.rst  desdeo_mcdm.interactive.NautilusNavigator.rst  desdeo_mcdm.interactive.NautilusNavigatorException.rst  desdeo_mcdm.interactive.NautilusNavigatorRequest.rst  desdeo_mcdm.interactive.NautilusRequest.rst  desdeo_mcdm.interactive.NautilusStopRequest.rst  desdeo_mcdm.interactive.NautilusV2.rst  desdeo_mcdm.interactive.NimbusClassificationRequest.rst  desdeo_mcdm.interactive.NimbusException.rst  desdeo_mcdm.interactive.NimbusIntermediateSolutionsRequest.rst  desdeo_mcdm.interactive.NimbusMostPreferredRequest.rst  desdeo_mcdm.interactive.NimbusSaveRequest.rst  desdeo_mcdm.interactive.NimbusStopRequest.rst  desdeo_mcdm.interactive.RPMException.rst  desdeo_mcdm.interactive.RPMInitialRequest.rst  desdeo_mcdm.interactive.RPMRequest.rst  desdeo_mcdm.interactive.RPMStopRequest.rst  desdeo_mcdm.interactive.ReferencePointMethod.rst  desdeo_mcdm.interactive.validate_n1_preferences.rst  desdeo_mcdm.interactive.validate_n2_preferences.rst  desdeo_mcdm.interactive.validate_n_iterations.rst  desdeo_mcdm.interactive.validate_preferences.rst  desdeo_mcdm.interactive.validate_response.rst  desdeo_mcdm.utilities.payoff_table_method.rst  desdeo_mcdm.utilities.payoff_table_method_general.rst  desdeo_mcdm.utilities.solve_pareto_front_representation.rst  desdeo_mcdm.utilities.solve_pareto_front_representation_general.rst  desdeo_mcdm.utilities.weighted_scalarizer.rst
docs/background/: about_nimbus.rst  background.rst  index.rst
docs/notebooks/: nautilus_navigator.ipynb  synchronous_nimbus.ipynb
examples/: nautilus_navigator.ipynb  synchronous_nimbus.ipynb
tests/: test_enautilus.py  test_nautilus_navigator.py  test_nimbus.py  test_rpm.py
