[tool.poetry]
name = "desdeo-mcdm"
version = "1.3.0"
description = "Contains traditional optimization techniques from the field of Multiple-criteria decision-making. Methods belonging to the NIMBUS and NAUTILUS families can be found here. Part of the DESDEO framework."
authors = ["Giovanni Misitano", "Antti Luopajärvi"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
desdeo-tools = ">=1.8"
desdeo-problem = ">=1.5"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
black = "^19.10b0"
flake8 = "^3.7.9"
pylint = "^2.4.4"
rope = "^0.16.0"
sphinx = "^6.1.0"
rstcheck = "^3.3.1"
sphinx_rtd_theme = "^0.4.3"
sphinx_autodoc_typehints = "^1.10.3"
sphinx-automodapi = "^0.12"
recommonmark = "^0.6.0"
nbsphinx = "^0.8.11"
IPython = "^7.15.0"
ipykernel = "^5.3.0"
# jupyter = "^1.0.0"
matplotlib = "^3.2.1"
nb-clean = "^1.4.3"
jinja2 = "^3.0"
Cython = "^0.29.24"
sphinx-autoapi = "^1.8.1"
coverage = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
